--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "*",
     "dotenv": "^4.0.0",
     "express": "*",
+    "global-request-logger": "^0.1.1",
     "request": "^2.72.0"
   }
 }
