--- a/.env
+++ b/.env
@@ -13,5 +13,6 @@ API_CLIENT_KEY=706e5f5b8e4605f6
 USER_ID=yeto
 SESSION_ID=mysession
 PLACEMENTS_ID=generic_page.rory_browse_categories
+PLACEMENTS_ID_SIMILAR=generic_page.rory_similar_items
 
 # note: .env is a shell file so there can't be spaces around '=
