--- a/.env
+++ b/.env
@@ -17,6 +17,7 @@ USER_ID=yeto
 SESSION_ID=mysession
 PLACEMENTS_ID=generic_page.rory_browse_categories
 PLACEMENTS_ID_SIMILAR=generic_page.rory_similar_items
+PLACEMENTS_ID_ECHO=
 BY_FAV_API_KEY=dbeab3c977a08905
 BY_FAV_TARGETTYPE=product
 BY_FAV_ACTIONTYPE=like
@@ -26,5 +27,3 @@ CLOUDINARY_API_KEY=438813316157917
 CLOUDINARY_API_SECRET=WrUvy1lfCqwYLVLHV4GkDrSVqmE
 
 # note: .env is a shell file so there can't be spaces around '=
-
-?apiKey=dbeab3c977a08905&fields=pref_brand|pref_category|pref_product|pref_store
