--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ USER_ID=yeto
 SESSION_ID=mysession
 PLACEMENTS_ID=generic_page.rory_browse_categories
 PLACEMENTS_ID_SIMILAR=generic_page.rory_similar_items
-PLACEMENTS_ID_ECHO=
+PLACEMENTS_ID_ECHO=generic_page.rory_echo_product
 BY_FAV_API_KEY=dbeab3c977a08905
 BY_FAV_TARGETTYPE=product
 BY_FAV_ACTIONTYPE=like
