--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@ PLACEMENTS_ID_SIMILAR=generic_page.rory_similar_items
 PLACEMENTS_ID_ECHO=generic_page.rory_echo_product
 BY_FAV_API_KEY=dbeab3c977a08905
 BY_FAV_TARGETTYPE=product
-BY_FAV_ACTIONTYPE=like
+BY_FAV_ACTIONTYPE=neutral
 BY_FAV_FIELDS=pref_brand|pref_category|pref_product|pref_store
 CLOUDINARY_CLOUD_NAME=ulichitr
 CLOUDINARY_API_KEY=438813316157917
