--- a/.env
+++ b/.env
@@ -11,6 +11,7 @@ VERIFY_TOKEN=hello-world
 STAGING_URL=https://staging.richrelevance.com/rrserver/api/rrPlatform/recsForPlacements
 PROD_URL=https://recs.richrelevance.com/rrserver/api/user/preference
 PROD_FAV_URL=https://recs.richrelevance.com/rrserver/api/user/preference/kathi
+FIND_URL=https://staging.richrelevance.com/rrserver/api/find/v1/dbeab3c977a08905
 API_KEY=dbeab3c977a08905
 API_CLIENT_KEY=706e5f5b8e4605f6
 USER_ID=kathi
@@ -18,6 +19,7 @@ SESSION_ID=mysession
 PLACEMENTS_ID=generic_page.rory_browse_categories
 PLACEMENTS_ID_SIMILAR=generic_page.rory_similar_items
 PLACEMENTS_ID_ECHO=generic_page.rory_echo_product
+PLACEMENTS_ID_FIND=generic_page.rory_search
 BY_FAV_API_KEY=dbeab3c977a08905
 BY_FAV_TARGETTYPE=product
 BY_FAV_ACTIONTYPE=neutral
