--- a/.env
+++ b/.env
@@ -12,6 +12,7 @@ STAGING_URL=https://staging.richrelevance.com/rrserver/api/rrPlatform/recsForPla
 PROD_URL=https://recs.richrelevance.com/rrserver/api/user/preference
 PROD_FAV_URL=https://recs.richrelevance.com/rrserver/api/user/preference/kathi
 FIND_URL=https://staging.richrelevance.com/rrserver/api/find/v1/dbeab3c977a08905
+BNY_HOME=https://www.barneys.com/
 API_KEY=dbeab3c977a08905
 API_CLIENT_KEY=706e5f5b8e4605f6
 USER_ID=kathi
