apiai into action

--- a/.env
+++ b/.env
@@ -30,5 +30,6 @@ BY_FAV_FIELDS=pref_brand|pref_category|pref_product|pref_store
 CLOUDINARY_CLOUD_NAME=ulichitr
 CLOUDINARY_API_KEY=438813316157917
 CLOUDINARY_API_SECRET=WrUvy1lfCqwYLVLHV4GkDrSVqmE
+APIAI_CLIENT_ACCESS_TOKEN=0ccf898af8834a579632f9a028092060
 
 # note: .env is a shell file so there can't be spaces around '=
