--- a/.env
+++ b/.env
@@ -31,5 +31,6 @@ CLOUDINARY_CLOUD_NAME=ulichitr
 CLOUDINARY_API_KEY=438813316157917
 CLOUDINARY_API_SECRET=WrUvy1lfCqwYLVLHV4GkDrSVqmE
 APIAI_CLIENT_ACCESS_TOKEN=0ccf898af8834a579632f9a028092060
+WEATHER_API_KEY=72166c887be70c387225e5c2cd53a2cb
 
 # note: .env is a shell file so there can't be spaces around '=
