--- a/.env
+++ b/.env
@@ -26,6 +26,7 @@ PLACEMENTS_ID_CAT=category_page.rory_category_stream
 BY_FAV_API_KEY=dbeab3c977a08905
 BY_FAV_TARGETTYPE=product
 BY_FAV_ACTIONTYPE=like
+BY_FAV_ACTIONTYPE_NEUTRAL=neutral
 BY_FAV_FIELDS=pref_brand|pref_category|pref_product|pref_store
 CLOUDINARY_CLOUD_NAME=ulichitr
 CLOUDINARY_API_KEY=438813316157917
