--- a/.env
+++ b/.env
@@ -23,6 +23,7 @@ PLACEMENTS_ID_SIMILAR=generic_page.rory_similar_items
 PLACEMENTS_ID_ECHO=generic_page.rory_echo_product
 PLACEMENTS_ID_FIND=generic_page.rory_search
 PLACEMENTS_ID_CAT=category_page.rory_category_stream
+PLACEMENTS_ID_COMPLEMENTARY=generic_page.rory_complementary_items
 BY_FAV_API_KEY=dbeab3c977a08905
 BY_FAV_TARGETTYPE=product
 BY_FAV_ACTIONTYPE=like
